--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
-  - user: name=tset password={{password_tset}} state=present
+  - name: Set password user soporte
+    user:
+      name: soporte
+      password: '{{password_soporte}}'
+      state: present
+  - name: Set password user soportext
+    user:
+      name: soportext
+      password: '{{password_soporte}}'
+      state: present
