--- a/roles/system/tasks/keys.yml
+++ b/roles/system/tasks/keys.yml
@@ -3,16 +3,19 @@
     authorized_key:
       user: root
       state: present
+      manage_dir: yes
       key: https://raw.githubusercontent.com/IsotrolSA/ansible-client-role/{{branch}}/keys/id_rsa_guadalinfo.pub
 
   - name: Set RSA Pub Key user soporte
     authorized_key:
       user: soporte
       state: present
+      manage_dir: yes
       key: https://raw.githubusercontent.com/IsotrolSA/ansible-client-role/{{branch}}/keys/id_rsa_soporte_guadalinfo.pub
 
   - name: Set RSA Pub Key user soportext
     authorized_key:
-      user: soporte
+      user: soportext
       state: present
+      manage_dir: yes
       key: https://raw.githubusercontent.com/IsotrolSA/ansible-client-role/{{branch}}/keys/id_rsa_soportext_guadalinfo.pub
