--- a/roles/services/vars/sshd_vars.yml
+++ b/roles/services/vars/sshd_vars.yml
@@ -1,6 +1,6 @@
 ---
 sshd_port: "22"
-sshd_listen_address: ["::", "0.0.0.0"]
+sshd_listen_address: ["0.0.0.0"]
 sshd_allow_groups: []
 sshd_protocol: "2"
 sshd_host_keys: ["ed25519", "rsa", "ecdsa"]
