Update main.yml with include vnc.yml

--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -7,3 +7,5 @@
     include_tasks: keys.yml
   - name: Include DebConf task
     include_tasks: debconf.yml
+  - name: Include VNC task
+    include_tasks: vnc.yml
